[fix] center sidebar on mobile

--- a/app/_components/progress-list.module.css
+++ b/app/_components/progress-list.module.css
@@ -1,7 +1,7 @@
 .progress_group {
   display: flex;
-  flex-direction: column;
   flex-flow: column-reverse;
+  margin: auto;
 }
 
 .progress {
