--- a/app/_components/sidebar.module.css
+++ b/app/_components/sidebar.module.css
@@ -20,6 +20,8 @@
   bottom: 0;
   right: 0;
   z-index: 3;
+  display: flex;
+  flex-direction: column;
 
   @media (min-width: 768px) {
     position: static;
